Canary-deployment/apache-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - image: httpd
        name: canary
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
