Canary-deployment/onlineshop-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary
  name: canary-online-shop
  namespace: canary-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - image: amitabhdevops/online_shop
        name: canary-online-shop
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
