Canary-deployment/onlineshop-without-footer-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary
  name: canary-online-shop
  namespace: canary-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - image: amitabhdevops/online_shop_without_footer
        name: canary-online-shop-without-footer
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
