Canary-deployment/canary-combined-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-canary
  namespace: canary-ns
spec:
  selector:
    app: online-shop
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
  type: NodePort
