Canary-deployment/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-deployment-service
  namespace: canary-ns
spec:
  selector:
    app: canary
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
