Canary-deployment/nginx-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary
  name: canary
spec:
  replicas: 4
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - image: nginx
        name: canary
---
apiVersion: v1
kind: Service
metadata:
  name: canary-deployment-service
spec:
  selector:
    app: canary
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
