Canary-deployment/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-v1
  namespace: canary-ns
spec:
  selector:
    app: online-shop
    version: v1
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30081
  type: NodePort
