Canary-deployment/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-v2
  namespace: canary-ns
spec:
  selector:
    app: online-shop
    version: v2
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
