Canary-deployment/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: canary-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: onlineshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-shop-v2
            port:
              number: 80
