Canary-deployment/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: canary-ns
spec:
  ingressClassName: nginx
  rules:
  - host: 54.237.87.116   # Replace with your actual host or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-shop-v1
            port:
              number: 80
